--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.logbookr.logmydive</groupId>
-	<artifactId>logmydive-admin</artifactId>
+	<artifactId>logmydive-app</artifactId>
 	<version>1.0.0</version>
 	<name>Log My Dive</name>
 	<prerequisites>
