--- a/.settings/org.eclipse.wst.validation.prefs
+++ b/.settings/org.eclipse.wst.validation.prefs
@@ -11,5 +11,6 @@ vals/org.eclipse.jst.jsp.core.JSPContentValidator/global=TF01
 vals/org.eclipse.jst.jsp.core.TLDValidator/global=TF01
 vals/org.eclipse.wst.dtd.core.dtdDTDValidator/global=TF01
 vals/org.eclipse.wst.wsdl.validation.wsdl/global=TF02158org.eclipse.wst.wsdl.validation.internal.eclipse.Validator
+vals/org.eclipse.wst.xml.core.xml/global=TF03
 vals/org.eclipse.wst.xsl.core.xsl/global=TF02
 vf.version=3
