--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,16 @@
 		<spring-security-javaconfig-version>1.0.0.M1</spring-security-javaconfig-version>
 		<spring-faces-version>2.4.0.M1</spring-faces-version>
 		<spring-webflow-version>2.4.0.M1</spring-webflow-version>
+		<myfaces-test20-version>1.0.4</myfaces-test20-version>
 		<cloudfoundry-runtime-version>0.8.4</cloudfoundry-runtime-version>
 		<primefaces-version>4.0.RC1</primefaces-version>
-		<!-- <primefaces-version>3.5.10</primefaces-version> -->
+		<primefaces-ext-version>1.0.0.RC1</primefaces-ext-version>
 		<primefaces.themes-version>1.0.10</primefaces.themes-version>
+		<!-- all-themes, afternoon, trontastic -->
+		<primefaces.theme-artifactId>all-themes</primefaces.theme-artifactId>
 		<jackson-core-version>2.2.3</jackson-core-version>
 		<jackson-databind-version>2.2.3</jackson-databind-version>
 		<jackson-annotations-version>2.2.3</jackson-annotations-version>
-		<!-- all-themes, afternoon, trontastic -->
-		<primefaces.theme-artifactId>all-themes</primefaces.theme-artifactId>
 		<tomcat-jsp-api-version>7.0.42</tomcat-jsp-api-version>
 		<joda-time-version>2.2</joda-time-version>
 		<guava-version>14.0.1</guava-version>
@@ -35,7 +36,7 @@
 		<dbunit-version>2.4.9</dbunit-version>
 		<spring-test-dbunit-version>1.0.0</spring-test-dbunit-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
-		<com.sun.faces-version>2.2.2</com.sun.faces-version>
+		<com.sun.faces-version>2.2.3</com.sun.faces-version>
 		<wiser-version>1.2</wiser-version>
 		<net.sf.ehcache-version>2.6.5</net.sf.ehcache-version>
 		<beanutils-version>1.8.3</beanutils-version>
@@ -56,7 +57,7 @@
 		<mojo.exec-maven-plugin-version>1.2.1</mojo.exec-maven-plugin-version>
 		<commons-fileupload-version>1.3</commons-fileupload-version>
 		<commons-io-version>2.4</commons-io-version>
-		<!-- <javax.javaee-web-api-version>7.0</javax.javaee-web-api-version> -->
+		<javax.javaee-web-api-version>7.0</javax.javaee-web-api-version>
 		<maven-compiler-plugin-version>2.5.1</maven-compiler-plugin-version>
 		<maven-eclipse-plugin-version>2.9</maven-eclipse-plugin-version>
 		<maven-surefire-plugin-version>2.16</maven-surefire-plugin-version>
@@ -68,7 +69,8 @@
 	</properties>
 	<packaging>war</packaging>
 	<repositories>
-		<!-- see setup/maven/settings.xml in the setup project for other repositories required -->
+		<!-- see setup/maven/settings.xml in the setup project for other repositories 
+			required -->
 		<repository>
 			<id>org.springframework.maven.milestone</id>
 			<name>Spring Maven Milestone Repository</name>
@@ -87,10 +89,6 @@
 			<name>PrimeFaces Maven Repository</name>
 			<url>http://repository.primefaces.org</url>
 			<layout>default</layout>
-		</repository>
-		<repository>
-			<id>glassfish-repo</id>
-			<url>http://download.java.net/maven/glassfish</url>
 		</repository>
 		<repository>
 			<id>java.net-Public</id>
@@ -122,9 +120,10 @@
 		<!-- ########## -->
 		<!-- MONITORING -->
 		<!-- ########## -->
-		<!-- <dependency> <groupId>net.bull.javamelody</groupId> <artifactId>javamelody-core</artifactId> <version>1.45.0</version> 
+		<!-- <dependency> <groupId>net.bull.javamelody</groupId> <artifactId>javamelody-core</artifactId> 
+			<version>1.45.0</version> </dependency> -->
+		<!-- <dependency> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId> 
 			</dependency> -->
-		<!-- <dependency> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId> </dependency> -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
@@ -149,12 +148,12 @@
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derbyclient</artifactId>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
-			<scope>provided</scope>
+			<scope>test</scope>
 		</dependency>
 		<!-- Derby End - 10.8.2.2 or 10.10.1.1 -->
 
@@ -162,7 +161,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 		<!-- h2database end -->
 
@@ -296,8 +295,9 @@
 		<!-- Spring Security End -->
 
 		<!-- Spring Mobile Start -->
-		<!-- <dependency> <groupId>org.springframework.android</groupId> <artifactId>spring-android-rest-template</artifactId> <version>1.0.1.RELEASE</version> 
-			</dependency> <dependency> <groupId>org.springframework.mobile</groupId> <artifactId>spring-mobile-device</artifactId> <version>${org.springframework.mobile-version}</version> 
+		<!-- <dependency> <groupId>org.springframework.android</groupId> <artifactId>spring-android-rest-template</artifactId> 
+			<version>1.0.1.RELEASE</version> </dependency> <dependency> <groupId>org.springframework.mobile</groupId> 
+			<artifactId>spring-mobile-device</artifactId> <version>${org.springframework.mobile-version}</version> 
 			</dependency> -->
 		<!-- Spring Mobile End -->
 
@@ -312,7 +312,7 @@
 			<artifactId>jsf-impl</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+ 
 
 		<!-- Primefaces dependency -->
 		<dependency>
@@ -324,6 +324,11 @@
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>${primefaces.theme-artifactId}</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.primefaces.extensions</groupId>
+			<artifactId>primefaces-extensions</artifactId>
+		</dependency>
+
 		<!-- Hibernate dependencies -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -338,7 +343,8 @@
 			<artifactId>hibernate-c3p0</artifactId>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search</artifactId> </dependency> -->
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search</artifactId> 
+			</dependency> -->
 		<!-- JSR 303 validation -->
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -369,8 +375,9 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
 		</dependency>
-		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> <scope>runtime</scope> <exclusions> <exclusion> 
-			<artifactId>log4j</artifactId> <groupId>log4j</groupId> </exclusion> </exclusions> </dependency> -->
+		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> 
+			<scope>runtime</scope> <exclusions> <exclusion> <artifactId>log4j</artifactId> 
+			<groupId>log4j</groupId> </exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -430,18 +437,24 @@
 			<artifactId>usertype.core</artifactId>
 			<scope>compile</scope>
 		</dependency>
+	 	<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-web-api</artifactId> 
+			<scope>test</scope>
+		</dependency>
+		
+		<!-- Test -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-servlet-api</artifactId>
-			<scope>provided</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jsp-api</artifactId>
-			<scope>provided</scope>
+			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <groupId>javax</groupId> <artifactId>javaee-web-api</artifactId> <scope>provided</scope> </dependency> -->
-		<!-- Test -->
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -474,12 +487,8 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.myfaces.test</groupId>
-			<artifactId>myfaces-test20</artifactId>
-			<version>1.0.4</version>
-			<scope>test</scope>
-		</dependency>
+		<!-- <dependency> <groupId>org.apache.myfaces.test</groupId> <artifactId>myfaces-test20</artifactId> 
+			<version>${myfaces-test20-version}</version> <scope>test</scope> </dependency> -->
 		<dependency>
 			<groupId>org.jboss.arquillian</groupId>
 			<artifactId>arquillian-bom</artifactId>
@@ -558,7 +567,8 @@
 						</goals>
 						<configuration>
 							<skipTests>${maven.integration-test.skip}</skipTests>
-							<!-- Make sure to include this part, since otherwise it is excluding Integration tests -->
+							<!-- Make sure to include this part, since otherwise it is excluding 
+								Integration tests -->
 							<excludes>
 								<exclude>none</exclude>
 							</excludes>
@@ -611,9 +621,10 @@
 				<configuration>
 					<!-- root is 2 directories away from jar/war modules -->
 					<relativePath>../../../../</relativePath>
-					<!-- use a system property for specifing root directory (note the double $) start your application with -Drebel.root=c:/projects/ 
-						and in JRebel Config Centre -> Advanced -> Advanced / Custom Properties for when starting a server from inside Eclipse e.g. VMWare 
-						vFabric tc Server -->
+					<!-- use a system property for specifing root directory (note the double 
+						$) start your application with -Drebel.root=c:/projects/ and in JRebel Config 
+						Centre -> Advanced -> Advanced / Custom Properties when starting a server 
+						from inside Eclipse e.g. VMWare vFabric tc Server -->
 					<!-- <rootPath>$${rebel.root}</rootPath> -->
 					<showGenerated>true</showGenerated>
 					<alwaysGenerate>true</alwaysGenerate>
@@ -623,14 +634,16 @@
 						<fallback>default</fallback>
 						<resources>
 							<resource>
-								<!-- Empty resource element marks default configuration. By default it is placed first in generated configuration. -->
+								<!-- Empty resource element marks default configuration. By default 
+									it is placed first in generated configuration. -->
 							</resource>
 						</resources>
 					</classpath>
 					<web>
 						<resources>
 							<resource>
-								<!-- Empty resource element marks default configuration. By default it is placed first in generated configuration. -->
+								<!-- Empty resource element marks default configuration. By default 
+									it is placed first in generated configuration. -->
 							</resource>
 						</resources>
 					</web>
@@ -747,8 +760,8 @@
 	</scm>
 	<dependencyManagement>
 		<dependencies>
-			<!-- <dependency> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId> <version>${commons-logging-version}</version> 
-				</dependency> -->
+			<!-- <dependency> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId> 
+				<version>${commons-logging-version}</version> </dependency> -->
 			<dependency>
 				<groupId>commons-fileupload</groupId>
 				<artifactId>commons-fileupload</artifactId>
@@ -925,6 +938,14 @@
 				<artifactId>jsf-impl</artifactId>
 				<version>${com.sun.faces-version}</version>
 			</dependency>
+			<!-- 
+			<dependency>
+				<groupId>javax.el</groupId>
+				<artifactId>el-api</artifactId>
+				<version>2.2</version>
+				<scope>test</scope>
+			</dependency>
+			 -->
 			<dependency>
 				<groupId>org.primefaces</groupId>
 				<artifactId>primefaces</artifactId>
@@ -934,6 +955,11 @@
 				<groupId>org.primefaces.themes</groupId>
 				<artifactId>${primefaces.theme-artifactId}</artifactId>
 				<version>${primefaces.themes-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.primefaces.extensions</groupId>
+				<artifactId>primefaces-extensions</artifactId>
+				<version>${primefaces-ext-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -950,8 +976,8 @@
 				<artifactId>hibernate-c3p0</artifactId>
 				<version>${hibernate-c3p0-version}</version>
 			</dependency>
-			<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search</artifactId> <version>${hibernate-search-version}</version> 
-				</dependency> -->
+			<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search</artifactId> 
+				<version>${hibernate-search-version}</version> </dependency> -->
 			<dependency>
 				<groupId>javax.validation</groupId>
 				<artifactId>validation-api</artifactId>
@@ -982,8 +1008,6 @@
 				<artifactId>jul-to-slf4j</artifactId>
 				<version>${org.slf4j-version}</version>
 			</dependency>
-			<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> <version>${org.slf4j-version}</version> 
-				</dependency> -->
 			<dependency>
 				<groupId>javax.inject</groupId>
 				<artifactId>javax.inject</artifactId>
@@ -1004,6 +1028,7 @@
 				<artifactId>usertype.core</artifactId>
 				<version>${org.jadira.usertype.core-version}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>org.apache.tomcat</groupId>
 				<artifactId>tomcat-servlet-api</artifactId>
@@ -1014,8 +1039,12 @@
 				<artifactId>tomcat-jsp-api</artifactId>
 				<version>${tomcat-jsp-api-version}</version>
 			</dependency>
-			<!-- <dependency> <groupId>javax</groupId> <artifactId>javaee-web-api</artifactId> <version>${javax.javaee-web-api-version}</version> 
-				</dependency> -->
+
+			<dependency>
+				<groupId>javax</groupId>
+				<artifactId>javaee-web-api</artifactId> 
+				<version>${javax.javaee-web-api-version}</version>
+			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
