--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,69 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="LogMyDiveWebApp" version="3.0">
+
+	<!-- PrimeFaces -->
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>metroui</param-value>
 	</context-param>
+
+
+	<context-param>
+		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+		<param-value>.xhtml</param-value>
+	</context-param>
+	<context-param>
+		<param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+		<param-value>
+			/WEB-INF/taglib/springsecurity.taglib.xml;/WEB-INF/taglib/lbm-components.xml
+		</param-value>
+	</context-param>
+	<context-param>
+		<param-name>javax.faces.CONFIG_FILES</param-name>
+		<param-value>/WEB-INF/faces-config.xml</param-value>
+	</context-param>
+	<context-param>
+		<description>
+				State saving method: "client" or "server" (= default) See
+				JSF Specification 2.5.3
+			</description>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>client</param-value>
+	</context-param>
+	<context-param>
+		<description>
+			Define partial state saving as true/false.
+		</description>
+		<param-name>javax.faces.PARTIAL_STATE_SAVING_METHOD</param-name>
+		<param-value>false</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>client</param-value>
+	</context-param>
+	<context-param>
+		<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
+		<param-value>1</param-value>
+	</context-param>
+	<context-param>
+		<param-name>facelets.DEVELOPMENT</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	<!-- 
+	<context-param>
+		<param-name>javax.faces.PROJECT_STAGE</param-name>
+		<param-value>Development</param-value>
+	</context-param>
+	 -->
+	<resource-ref>
+		<res-ref-name>jsf/ProjectStage</res-ref-name>
+		<res-type>java.lang.String</res-type>
+	</resource-ref>
+
+
+	<!-- Spring MVC -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:com/logbookmanager/configuration/spring/app-root.xml</param-value>
@@ -31,21 +90,7 @@
 	</filter-mapping>
 
 
-	<context-param>
-		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
-		<param-value>.xhtml</param-value>
-	</context-param>
-	<!-- <context-param> <param-name>javax.faces.PROJECT_STAGE</param-name> 
-		<param-value>Development</param-value> </context-param> -->
 	<!-- Special Debug Output for Development -->
-	<context-param>
-		<param-name>facelets.DEVELOPMENT</param-name>
-		<param-value>true</param-value>
-	</context-param>
-	<context-param>
-		<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
-		<param-value>1</param-value>
-	</context-param>
 	<servlet>
 		<servlet-name>facesServlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -192,36 +237,6 @@
 		<error-code>404</error-code>
 		<location>/app/error/file-not-found.html</location>
 	</error-page>
-	<context-param>
-		<param-name>javax.faces.FACELETS_LIBRARIES</param-name>
-		<param-value>
-			/WEB-INF/taglib/springsecurity.taglib.xml;/WEB-INF/taglib/lbm-components.xml
-		</param-value>
-	</context-param>
-	<context-param>
-		<param-name>javax.faces.CONFIG_FILES</param-name>
-		<param-value>/WEB-INF/faces-config.xml</param-value>
-	</context-param>
-	<context-param>
-		<description>
-				State saving method: "client" or "server" (= default) See
-				JSF Specification 2.5.3
-			</description>
-		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-		<param-value>client</param-value>
-	</context-param>
-	<context-param>
-		<description>
-			Define partial state saving as true/false.
-		</description>
-		<param-name>javax.faces.PARTIAL_STATE_SAVING_METHOD</param-name>
-		<param-value>false</param-value>
-	</context-param>
-
-	<context-param>
-		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-		<param-value>client</param-value>
-	</context-param>
 
 	<welcome-file-list>
 		<welcome-file>index.htm</welcome-file>
@@ -235,8 +250,4 @@
 		<auth-constraint />
 	</security-constraint>
 
-	<resource-ref>
-		<res-ref-name>jsf/ProjectStage</res-ref-name>
-		<res-type>java.lang.String</res-type>
-	</resource-ref>
 </web-app>
