--- a/.gitignore
+++ b/.gitignore
@@ -1,78 +1,3 @@
 /target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
-/target
 /bin
+ehcache-cachestore/
