--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,18 @@
 	<properties>
 		<m2eclipse.wtp.contextRoot>/web</m2eclipse.wtp.contextRoot>
 		<javassist-version>3.18.0-GA</javassist-version>
-		<springframework-version>3.2.4.RELEASE</springframework-version>
+		<!-- Spring versions 3.2.4.RELEASE -->
+		<!-- <springframework-version>4.0.0.M3</springframework-version> -->
+		<!-- Versions 4.0.0.M3 -->
+		<springframework-version>4.0.0.M3</springframework-version>
 		<spring-security-version>3.2.0.M2</spring-security-version>
 		<spring-security-javaconfig-version>1.0.0.M1</spring-security-javaconfig-version>
 		<spring-faces-version>2.4.0.M1</spring-faces-version>
-		<spring-webflow-version>2.4.0.M1</spring-webflow-version>
+		<!-- Webflow version 2.4.0.M1 -->
+		<!-- <spring-webflow-version>2.4.0.M1</spring-webflow-version> -->
+		<!-- Webflow version 2.4.0.BUILD-SNAPSHOT -->
+		<spring-webflow-version>2.4.0.BUILD-20130620.194537-39</spring-webflow-version>
+		<spring-webflow-binding-version>2.4.0.BUILD-20130620.194537-39</spring-webflow-binding-version>
 		<myfaces-test20-version>1.0.4</myfaces-test20-version>
 		<cloudfoundry-runtime-version>0.8.4</cloudfoundry-runtime-version>
 		<primefaces-version>4.0.RC1</primefaces-version>
@@ -34,6 +41,7 @@
 		<jrebel-maven-plugin-version>1.1.3</jrebel-maven-plugin-version>
 		<junit-version>4.11</junit-version>
 		<dbunit-version>2.4.9</dbunit-version>
+
 		<spring-test-dbunit-version>1.0.0</spring-test-dbunit-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<com.sun.faces-version>2.2.3</com.sun.faces-version>
@@ -71,13 +79,29 @@
 	<repositories>
 		<!-- see setup/maven/settings.xml in the setup project for other repositories 
 			required -->
+		<!-- 
+		<repository>
+			<id>repository.springsource.milestone</id>
+			<name>SpringSource Milestone Repository</name>
+			<url>http://repo.springsource.org/milestone</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+ 		-->
 		<repository>
 			<id>org.springframework.maven.milestone</id>
 			<name>Spring Maven Milestone Repository</name>
 			<url>http://maven.springframework.org/milestone/</url>
 			<snapshots>
-				<enabled>false</enabled>
+				<enabled>true</enabled>
 			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>springsource-repository</id>
@@ -122,6 +146,13 @@
 		<!-- ########## -->
 		<!-- <dependency> <groupId>net.bull.javamelody</groupId> <artifactId>javamelody-core</artifactId> 
 			<version>1.45.0</version> </dependency> -->
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
@@ -850,7 +881,7 @@
 			<dependency>
 				<groupId>org.springframework.webflow</groupId>
 				<artifactId>spring-binding</artifactId>
-				<version>${spring-webflow-version}</version>
+				<version>${spring-webflow-binding-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.webflow</groupId>
@@ -1073,6 +1104,12 @@
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
 				<version>${springframework-version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
