--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,9 @@
 		<jrebel-maven-plugin-version>1.1.3</jrebel-maven-plugin-version>
 		<junit-version>4.11</junit-version>
 		<dbunit-version>2.4.9</dbunit-version>
-
+		<disruptor-version>3.2.0</disruptor-version>
 		<spring-test-dbunit-version>1.0.0</spring-test-dbunit-version>
+		<selenium-java-version>2.35.0</selenium-java-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<com.sun.faces-version>2.2.3</com.sun.faces-version>
 		<wiser-version>1.2</wiser-version>
@@ -55,7 +56,7 @@
 		<hibernate-entitymanager-version>4.2.5.Final</hibernate-entitymanager-version>
 		<javax.validation.validation-api-version>1.1.0.Final</javax.validation.validation-api-version>
 		<derby-version>10.10.1.1</derby-version>
-		<commons-colletions-version>3.0</commons-colletions-version>
+		<commons-collections-version>3.2.1</commons-collections-version>
 		<commons-lang-version>2.6</commons-lang-version>
 		<!-- <commons-logging-version>1.1.1</commons-logging-version> -->
 		<javax.mail-version>1.4.6-rc1</javax.mail-version>
@@ -79,19 +80,10 @@
 	<repositories>
 		<!-- see setup/maven/settings.xml in the setup project for other repositories 
 			required -->
-		<!-- 
-		<repository>
-			<id>repository.springsource.milestone</id>
-			<name>SpringSource Milestone Repository</name>
-			<url>http://repo.springsource.org/milestone</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
- 		-->
+		<!-- <repository> <id>repository.springsource.milestone</id> <name>SpringSource 
+			Milestone Repository</name> <url>http://repo.springsource.org/milestone</url> 
+			<snapshots> <enabled>true</enabled> </snapshots> <releases> <enabled>true</enabled> 
+			</releases> </repository> -->
 		<repository>
 			<id>org.springframework.maven.milestone</id>
 			<name>Spring Maven Milestone Repository</name>
@@ -149,8 +141,21 @@
 		<dependency>
 			<groupId>com.lmax</groupId>
 			<artifactId>disruptor</artifactId>
-			<version>3.2.0</version>
+			<scope>test</scope>
+			<version>${disruptor-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>${selenium-java-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-htmlunit-driver</artifactId>
+			<scope>test</scope>
+			<version>${selenium-java-version}</version>
+		</dependency>
+
 
 
 		<dependency>
@@ -523,7 +528,7 @@
 			<version>${myfaces-test20-version}</version>
 			<scope>test</scope>
 		</dependency>
-
+<!-- 
 		<dependency>
 			<groupId>org.jboss.arquillian</groupId>
 			<artifactId>arquillian-bom</artifactId>
@@ -537,6 +542,7 @@
 			<version>1.1.1.Final</version>
 			<scope>test</scope>
 		</dependency>
+ -->
 		<dependency>
 			<groupId>org.subethamail</groupId>
 			<artifactId>subethasmtp-wiser</artifactId>
@@ -810,7 +816,7 @@
 			<dependency>
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
-				<version>${commons-colletions-version}</version>
+				<version>${commons-collections-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.sf.ehcache</groupId>
