--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,19 @@
 		</repository>
 	</repositories>
 	<dependencies>
+
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+
 		<!-- ########## -->
 		<!-- MONITORING -->
 		<!-- ########## -->
@@ -1002,8 +1015,6 @@
 				<artifactId>jsf-impl</artifactId>
 				<version>${com.sun.faces-version}</version>
 			</dependency>
-			<!-- <dependency> <groupId>javax.el</groupId> <artifactId>el-api</artifactId> 
-				<version>2.2</version> <scope>test</scope> </dependency> -->
 			<dependency>
 				<groupId>org.primefaces</groupId>
 				<artifactId>primefaces</artifactId>
