--- a/.project
+++ b/.project
@@ -52,4 +52,11 @@
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 		<nature>org.zeroturnaround.eclipse.jrebelNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/test/java/org</name>
+			<type>2</type>
+			<location>D:/Development/GitHub/logbookmanager-web/spring-webflow/spring-faces/src/test/java/org</location>
+		</link>
+	</linkedResources>
 </projectDescription>
