--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.logbookr.logmydive</groupId>
+	<groupId>com.logbookmanager.logmydive</groupId>
 	<artifactId>logmydive-app</artifactId>
 	<version>1.0.0</version>
 	<name>Log My Dive</name>
@@ -14,7 +14,9 @@
 		<javassist-version>3.18.0-GA</javassist-version>
 		<!-- Spring versions 3.2.4.RELEASE -->
 		<!-- <springframework-version>4.0.0.M3</springframework-version> -->
-		<!-- Versions 4.0.0.M3 -->
+		<!-- 
+		Versions 4.0.0.M3 
+		-->
 		<springframework-version>4.0.0.BUILD-SNAPSHOT</springframework-version>
 		<spring-security-version>3.2.0.CI-SNAPSHOT</spring-security-version>
 		<spring-security-javaconfig-version>1.0.0.M1</spring-security-javaconfig-version>
