--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,7 @@
 		<javassist-version>3.18.0-GA</javassist-version>
 		<!-- Spring versions 3.2.4.RELEASE -->
 		<!-- <springframework-version>4.0.0.M3</springframework-version> -->
-		<!-- 
-		Versions 4.0.0.M3 
-		-->
+		<!-- Versions 4.0.0.M3 -->
 		<springframework-version>4.0.0.BUILD-SNAPSHOT</springframework-version>
 		<spring-security-version>3.2.0.CI-SNAPSHOT</spring-security-version>
 		<spring-security-javaconfig-version>1.0.0.M1</spring-security-javaconfig-version>
