--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -26,6 +26,15 @@ hibernate.c3p0.max_statements=50
 hibernate.c3p0.idle_test_period=3000
 hibernate.c3p0.acquire_increment=1
 
+bonecp.idleMaxAge=240
+bonecp.idleConnectionTestPeriod=60
+bonecp.partitionCount=3
+bonecp.acquireIncrement=10
+bonecp.maxConnectionsPerPartition=60
+bonecp.minConnectionsPerPartition=20
+bonecp.statementsCacheSize=50
+bonecp.releaseHelperThreads=3
+
 # hibernate jdbc information
 hibernate.jdbc.use_scrollable_resultset=false
 hibernate.jdbc.use_streams_for_binary=true
