--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,13 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="LogMyDiveWebApp" version="3.0">
-
+	<context-param>
+	    <param-name>spring.profiles.active</param-name>
+	    <param-value>
+	    default,
+	    c3p0
+	    </param-value>
+	</context-param>
 	<!-- PrimeFaces -->
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
