--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,11 @@
 		<m2eclipse.wtp.contextRoot>/web</m2eclipse.wtp.contextRoot>
 		<javassist-version>3.18.0-GA</javassist-version>
 		<springframework-version>4.0.0.RELEASE</springframework-version>
-		<spring-security-version>3.2.0.RELEASE</spring-security-version>
-		<spring-security-javaconfig-version>1.0.0.M1</spring-security-javaconfig-version>
+		<spring-security-version>4.0.0.CI-SNAPSHOT</spring-security-version>
 		<spring-faces-version>2.4.0.BUILD-SNAPSHOT</spring-faces-version>
-		<spring-webflow-version>2.4.0.BUILD-SNAPSHOT</spring-webflow-version>
-		<spring-webflow-binding-version>2.4.0.BUILD-SNAPSHOT</spring-webflow-binding-version>
-		<myfaces-test20-version>1.0.4</myfaces-test20-version>
+		<spring-webflow-version>2.3.3.RELEASE</spring-webflow-version>
+		<spring-webflow-binding-version>${spring-webflow-version}</spring-webflow-binding-version>
+		<myfaces-test20-version>1.0.6</myfaces-test20-version>
 		<cloudfoundry-runtime-version>0.8.4</cloudfoundry-runtime-version>
 		<primefaces-version>4.0.7</primefaces-version>
 		<primefaces-ext-version>1.0.0.RC1</primefaces-ext-version>
@@ -354,16 +353,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-javaconfig</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -424,7 +414,10 @@
 			<groupId>com.jolbox</groupId>
 			<artifactId>bonecp</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.jolbox</groupId>
+			<artifactId>bonecp-provider</artifactId>
+		</dependency>
 	
 		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search</artifactId> 
 			</dependency> -->
@@ -1022,11 +1015,6 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-javaconfig</artifactId>
-				<version>${spring-security-javaconfig-version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-web</artifactId>
 				<version>${spring-security-version}</version>
 			</dependency>
@@ -1141,7 +1129,6 @@
 				<artifactId>usertype.core</artifactId>
 				<version>${org.jadira.usertype.core-version}</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.tomcat</groupId>
 				<artifactId>tomcat-servlet-api</artifactId>
@@ -1152,7 +1139,6 @@
 				<artifactId>tomcat-jsp-api</artifactId>
 				<version>${tomcat-version}</version>
 			</dependency>
-
 			<dependency>
 				<groupId>javax</groupId>
 				<artifactId>javaee-web-api</artifactId>
@@ -1173,7 +1159,6 @@
 				<artifactId>spring-test-dbunit</artifactId>
 				<version>${spring-test-dbunit-version}</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
