--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -44,8 +44,8 @@ hibernate.jdbc.use_get_generated_keys=true
 hibernate.jdbc.batch_size=0
 
 # 2d level cache
-hibernate.cache.use_query_cache=true
-hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=false
+hibernate.cache.use_second_level_cache=false
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 # EHCache is configured by Spring
 hibernate.cache.provider_configuration_file_resource_path=com/logbookmanager/configuration/ehcache.xml
