--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<springframework-version>4.0.0.RELEASE</springframework-version>
 		<spring-security-version>4.0.0.CI-SNAPSHOT</spring-security-version>
 		<spring-faces-version>2.4.0.BUILD-SNAPSHOT</spring-faces-version>
-		<spring-webflow-version>2.3.3.RELEASE</spring-webflow-version>
+		<spring-webflow-version>2.4.0.BUILD-SNAPSHOT</spring-webflow-version>
 		<spring-webflow-binding-version>${spring-webflow-version}</spring-webflow-binding-version>
 		<myfaces-test20-version>1.0.6</myfaces-test20-version>
 		<cloudfoundry-runtime-version>0.8.4</cloudfoundry-runtime-version>
@@ -97,6 +97,12 @@
 			<id>springsource-repository</id>
 			<name>Spring project snapshots, milestones, and releases</name>
 			<url>http://repo.springsource.org/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>prime-repo</id>
