--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,17 @@
 			<scope>test</scope>
 		</dependency>
 
+		<parent>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-parent</artifactId>
+		    <version>1.0.1.RELEASE</version>
+		</parent>
+		<dependencies>
+		    <dependency>
+		        <groupId>org.springframework.boot</groupId>
+		        <artifactId>spring-boot-starter-web</artifactId>
+		    </dependency>
+		</dependencies>
 
 		<!-- ########## -->
 		<!-- MONITORING -->
